welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:35: error: expected start of definition
	override def forward(i:Int)  { 
                 ^LineByLine:38: error: expected start of definition
	override def forward()  {
                 ^LineByLine:41: error: expected start of definition
	override def backward(i:Int) {
                 ^LineByLine:44: error: expected start of definition
	override def backward() {
                 ^LineByLine:47: error: Unmatched closing brace '}' ignored here
}
^